front page updated

--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -4,11 +4,12 @@ icon: fa-user
 order: 3
 ---
 
-<a href="#" class="image featured"><img src="assets/images/pic08.jpg" alt="" /></a>
+<a href="#" class="image featured"><img src="assets/images/pic08_detected.png" alt="" /></a>
 
-<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-ornare iaculis.</p>
+<p>My studies comprise a Bachelor of Science + Master of Science in Telecommunications Engineering by <a href="http://www.etsit.upm.es/">ETSIT-UPM</a>, plus an engineering diploma (equiv. B.Sc. + M.Sc. in the french system) in Machine Learning and Security by <a href="https://www.telecom-paristech.fr/">Telecom ParisTech</a>, <a href="https://www.eurecom.fr/en">EURECOM</a> campus</p>. I have worked as a Security Researcher in <b>Encrypted Object Detection</b> in SAP with <a href="https://fr.linkedin.com/in/laurent-gomez-2256312">Laurent Gomez</a>, and as a Telecom Engineer for <a href="https://montillatelevision.com/">INTNOVA Montilla</a>. Additionally, I have carried out my fair share of research:
+ <ul>
+  <li><b>Privacy Preserving Deep Learning</b> with <a href="http://www.eurecom.fr/~onen/">Melek Onen<a> and <a href="https://www.deib.polimi.it/eng/people/details/1388474">Luca Benedetto<a>, to implement an encrypted Convolutional Neural Network using Homomorphic Encrption.</li>
+  <li><b>Variational Autoencoders</b> with <a href="https://www.linkedin.com/in/jonas-wacker-b9650875/">Jonas Wacker</a> and <a href="http://www.eurecom.fr/~filippon/">Maurizio Filippone</a> in pusuance of a comparison of VAE with Bayesian Neural Networks, in terms of accuracy, complexity, latent space, reconstruction and noise filtering.</li>
+  <li><b>Control SW for a Power Supply Unit</b> with <a href="https://es.linkedin.com/in/alejandro-badolato-740736b9/en/">Alejandro Badolato</a> and <a href="http://www.gmr.ssr.upm.es/www2/grajal.htm">Jesus Grajal</a> on a complex PSU to feed a Radar for Object Detection.</li>
+</ul> 
+Even outside of academia/industry I never stand still, be it as a speaker in <a href="http://www.transitionmonacoforum.com/en/speakers">Monaco Transition Forum</a>, as part of the student association, volunteering for social work, learning via MOOCs/books, participating in math/coding challenges and playing handball or almost any sport you may think of. The list goes on (), but you get the hang of it: <i>A man who dares to waste one hour of time has not discovered the value of life.</i>
