--- a/_sections/contact.html
+++ b/_sections/contact.html
@@ -4,10 +4,7 @@ icon: fa-envelope
 order: 4
 ---
 
-<p>Elementum sem parturient nulla quam placerat viverra
-mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+<p>You may be interested in something that I do/have done. You may be seeking oy hire me. Yo may just wanna chat about the world of Andica. Feel free to contact me! .</p>
 
 <form method="post" action="https://formspree.io/{{ site.email }}">
   <div class="row">
