--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -1,17 +1,17 @@
 ---
 title: Intro
-cover-photo: assets/images/banner.jpg
-cover-photo-alt: example cover photo
+cover-photo: assets/images/FirstDetectionYOLOTiny.png
+cover-photo-alt: my cover photo
 auto-header: none
 icon: fa-comment
 order: 1
 ---
 <header>
-  <h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-  site template designed by <a href="http://html5up.net/prologue">HTML5 UP</a>.</h2>
-  <p>Adapted for Jekyll by <a href=https://chrisbobbe.github.io/>Chris Bobbe</a>. Get started on <a href="https://github.com/chrisbobbe/jekyll-theme-prologue">GitHub!</a></p>
+  <h2 class="alt">Hi! I'm <strong>Alberto Ibarrondo</strong>, a Telecom engineer<br />
+  driven by Machine Learning and Security.</h2>
+  <p>This is my personal page. Feel free to check my <a href="https://github.com/ibarrond">GitHub!</a></p>
 </header>
 
 <footer>
-  <a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+  <a href="#portfolio" class="button scrolly">Things I've done</a>
 </footer>
