--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -4,51 +4,48 @@ icon: fa-th
 order: 2
 ---
 
-<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-  egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-  Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-  fusce hendrerit lacus ridiculus.</p>
+<p>Collection of all my past and present projects. Most of them are open source.</p>
 
   <div class="row">
     <div class="4u 12u$(mobile)">
       <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic02.jpg' | relative_url }}" alt="Ipsum Feugiat" /></a>
+        <a href="https://github.com/ibarrond/Pyfhel" class="image fit"><img src="{{ 'pic02_logoPyfhel.png' | relative_url }}" alt="Pyfhel" /></a>
         <header>
-          <h3>Ipsum Feugiat</h3>
+          <h3>Pyfhel</h3>, Python for Homomorphic Encryption Libraries
         </header>
       </div>
       <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic03.jpg' | relative_url }}" alt="Rhoncus Semper" /></a>
+        <a href="https://github.com/ibarrond/AlgorithmicMachineLearning" class="image fit"><img src="{{ 'assets/images/pic04_dl.png' | relative_url }}" alt="Deep Learningr" /></a>
         <header>
-          <h3>Rhoncus Semper</h3>
-        </header>
-      </div>
-    </div>
-    <div class="4u 12u$(mobile)">
-      <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic04.jpg' | relative_url }}" alt="Magna Nullam" /></a>
-        <header>
-          <h3>Magna Nullam</h3>
-        </header>
-      </div>
-      <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic05.jpg' | relative_url }}" alt="Natoque Vitae" /></a>
-        <header>
-          <h3>Natoque Vitae</h3>
+          <h3>AlgoritmicMachineLearning</h3>, a Data Science portfolio
         </header>
       </div>
     </div>
     <div class="4u 12u$(mobile)">
       <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic06.jpg' | relative_url }}" alt="Dolor Penatibus" /></a>
+        <a href="https://github.com/ibarrond/DeepLearning" class="image fit"><img src="{{ 'assets/images/pic04.jpg' | relative_url }}" alt="Magna Nullam" /></a>
         <header>
-          <h3>Dolor Penatibus</h3>
+          <h3>DeepLearning</h3>, NN, CNN and RNN from scratch in Tensorflow
         </header>
       </div>
       <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic07.jpg' | relative_url }}" alt="Orci Convallis" /></a>
+        <a href="https://github.com/ibarrond/MachLearnMATLAB" class="image fit"><img src="{{ 'assets/images/pic05_Matlab.png' | relative_url }}" alt="Natoque Vitae" /></a>
         <header>
-          <h3>Orci Convallis</h3>
+          <h3>MachLearnMATLAB</h3>, Machine Learning from scratch in MATLAB
+        </header>
+      </div>
+    </div>
+    <div class="4u 12u$(mobile)">
+      <div class="item">
+        <a href="https://github.com/elenacer/seleccion-grupos-redes" class="image fit"><img src="{{ 'assets/images/pic06_social.jpg' | relative_url }}" alt="Dolor Penatibus" /></a>
+        <header>
+          <h3>SelectionGroupsNetworks</h3>, optimal group selection to maximize difussion in social networks.
+        </header>
+      </div>
+      <div class="item">
+        <a href="https://github.com/ibarrond/VariationalAutoencoders" class="image fit"><img src="{{ 'assets/images/pic07_autoenc.jpg' | relative_url }}" alt="Orci Convallis" /></a>
+        <header>
+          <h3>VariationalAutoencoders</h3>, comparing VAE with Bayesian NN.
         </header>
       </div>
     </div>
