--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -1,6 +1,6 @@
 ---
 title: Intro
-cover-photo: assets/images/FirstDetectionYOLOTiny.png
+cover-photo: assets/images/intro.jpg
 cover-photo-alt: my cover photo
 auto-header: none
 icon: fa-comment
