--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -9,13 +9,13 @@ order: 2
   <div class="row">
     <div class="4u 12u$(mobile)">
       <div class="item">
-        <a href="https://github.com/ibarrond/Pyfhel" class="image fit"><img src="{{ 'pic02_logoPyfhel.png' | relative_url }}" alt="Pyfhel" /></a>
+        <a href="https://github.com/ibarrond/Pyfhel" class="image fit"><img src="{{ 'assets/images/pic02_logoPyfhel.png' | relative_url }}" alt="Pyfhel" /></a>
         <header>
           <h3>Pyfhel</h3>, Python for Homomorphic Encryption Libraries
         </header>
       </div>
       <div class="item">
-        <a href="https://github.com/ibarrond/AlgorithmicMachineLearning" class="image fit"><img src="{{ 'assets/images/pic04_dl.png' | relative_url }}" alt="Deep Learningr" /></a>
+        <a href="https://github.com/ibarrond/AlgorithmicMachineLearning" class="image fit"><img src="{{ 'assets/images/pic03_aml.jpg' | relative_url }}" alt="Deep Learningr" /></a>
         <header>
           <h3>AlgoritmicMachineLearning</h3>, a Data Science portfolio
         </header>
@@ -23,7 +23,7 @@ order: 2
     </div>
     <div class="4u 12u$(mobile)">
       <div class="item">
-        <a href="https://github.com/ibarrond/DeepLearning" class="image fit"><img src="{{ 'assets/images/pic04.jpg' | relative_url }}" alt="Magna Nullam" /></a>
+        <a href="https://github.com/ibarrond/DeepLearning" class="image fit"><img src="{{ 'assets/images/pic04_dl.png' | relative_url }}" alt="Magna Nullam" /></a>
         <header>
           <h3>DeepLearning</h3>, NN, CNN and RNN from scratch in Tensorflow
         </header>
