--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -5,6 +5,7 @@ cover-photo-alt: my cover photo
 auto-header: none
 icon: fa-comment
 order: 1
+hide: true
 ---
 <header>
   <h2 class="alt">Hi! I'm <strong>Alberto Ibarrondo</strong>, a Telecom engineer<br />
@@ -13,5 +14,5 @@ order: 1
 </header>
 
 <footer>
-  <a href="#portfolio" class="button scrolly">Things I've done</a>
+  <a href="#portfolio" class="button scrolly">What I've done</a>
 </footer>
