--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -11,13 +11,13 @@ order: 2
       <div class="item">
         <a href="https://github.com/ibarrond/Pyfhel" class="image fit"><img src="{{ 'assets/images/pic02_logoPyfhel.png' | relative_url }}" alt="Pyfhel" /></a>
         <header>
-          <h3>Pyfhel</h3>, Python for Homomorphic Encryption Libraries
+          <h3><strong>Pyfhel</strong></h3>Python for Homomorphic Encryption Libraries
         </header>
       </div>
       <div class="item">
         <a href="https://github.com/ibarrond/AlgorithmicMachineLearning" class="image fit"><img src="{{ 'assets/images/pic03_aml.jpg' | relative_url }}" alt="Deep Learningr" /></a>
         <header>
-          <h3>AlgoritmicMachineLearning</h3>, a Data Science portfolio
+          <h3><strong>AlgoritmicMachineLearning></strong></h3>A Data Science portfolio
         </header>
       </div>
     </div>
@@ -25,13 +25,13 @@ order: 2
       <div class="item">
         <a href="https://github.com/ibarrond/DeepLearning" class="image fit"><img src="{{ 'assets/images/pic04_dl.png' | relative_url }}" alt="Magna Nullam" /></a>
         <header>
-          <h3>DeepLearning</h3>, NN, CNN and RNN from scratch in Tensorflow
+          <h3><strong>DeepLearning</strong></h3>NN, CNN and RNN from scratch in Tensorflow
         </header>
       </div>
       <div class="item">
         <a href="https://github.com/ibarrond/MachLearnMATLAB" class="image fit"><img src="{{ 'assets/images/pic05_Matlab.png' | relative_url }}" alt="Natoque Vitae" /></a>
         <header>
-          <h3>MachLearnMATLAB</h3>, Machine Learning from scratch in MATLAB
+          <h3><strong>MachLearnMATLAB</strong></h3>Machine Learning from scratch in MATLAB
         </header>
       </div>
     </div>
@@ -39,13 +39,13 @@ order: 2
       <div class="item">
         <a href="https://github.com/elenacer/seleccion-grupos-redes" class="image fit"><img src="{{ 'assets/images/pic06_social.jpg' | relative_url }}" alt="Dolor Penatibus" /></a>
         <header>
-          <h3>SelectionGroupsNetworks</h3>, optimal group selection to maximize difussion in social networks.
+          <h3><strong>SelectionGroupsNetworks</strong></h3>Optimal group selection to maximize difussion in social networks.
         </header>
       </div>
       <div class="item">
         <a href="https://github.com/ibarrond/VariationalAutoencoders" class="image fit"><img src="{{ 'assets/images/pic07_autoenc.jpg' | relative_url }}" alt="Orci Convallis" /></a>
         <header>
-          <h3>VariationalAutoencoders</h3>, comparing VAE with Bayesian NN.
+          <h3><strong>VariationalAutoencoders</strong></h3>Holistic comparison of VAE with Bayesian NN.
         </header>
       </div>
     </div>
