Trying color in icons

--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -43,7 +43,7 @@ order: 2
         </header>
       </div>
       <div class="item">
-        <a href="https://github.com/ibarrond/VariationalAutoencoders" class="image fit"><img src="{{ 'assets/images/pic07_autoenc.jpg' | relative_url }}" alt="Orci Convallis" /></a>
+        <a href="https://github.com/ibarrond/VariationalAutoencoders" class="image fit"><img src="{{ 'assets/images/pic07_autoenc.png' | relative_url }}" alt="Orci Convallis" /></a>
         <header>
           <h3><strong>VariationalAutoencoders</strong></h3>Holistic comparison of VAE with Bayesian NN.
         </header>
