Styling blockquote and some typos

--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -13,4 +13,8 @@ order: 3
   <li><b>Variational Autoencoders</b> with <a href="https://www.linkedin.com/in/jonas-wacker-b9650875/">Jonas Wacker</a> and <a href="http://www.eurecom.fr/~filippon/">Maurizio Filippone</a> in pusuance of a holistic comparison of VAE with Bayesian Neural Networks.</li>
   <li><b>Control SW for a Power Supply Unit</b> with <a href="https://es.linkedin.com/in/alejandro-badolato-740736b9/en/">Alejandro Badolato</a> and <a href="http://www.gmr.ssr.upm.es/www2/grajal.htm">Jesus Grajal</a> on a complex PSU to feed a Radar for Object Detection.</li>
 </ul> 
-<p class="justified">Even outside of academia/industry I never stand still, be it as a speaker in <a href="http://www.transitionmonacoforum.com/en/speakers">Monaco Transition Forum</a>, as part of the student association, volunteering for social work, learning via MOOCs/books, participating in math/coding challenges and playing handball or almost any sport you may think of. The list goes on (), but you get the hang of it: <i>A man who dares to waste one hour of time has not discovered the value of life.</i></p>
+<p class="justified">Even outside of academia/industry I never stand still, be it as a speaker in <a href="http://www.transitionmonacoforum.com/en/speakers">Monaco Transition Forum</a>, as part of the student association, volunteering for social work, learning via MOOCs/books, participating in math/coding challenges and playing handball or almost any sport you may think of. The list goes on but you get the hang of it.</p>
+
+<blockquote class="ludwig">
+    A man who dares to waste one hour of time has not discovered the value of life.
+  </blockquote>
