--- a/_sections/contact.html
+++ b/_sections/contact.html
@@ -4,7 +4,7 @@ icon: fa-envelope
 order: 4
 ---
 
-<p>You may be interested in something that I do/have done. You may be seeking oy hire me. Yo may just wanna chat about the world of Andica. Feel free to contact me! .</p>
+<p>You may be interested in something that I do/have done. You may be seeking to hire me. Yo may just wanna chat about the world of Andica. Feel free to contact me!</p>
 
 <form method="post" action="https://formspree.io/{{ site.email }}">
   <div class="row">
